Fix for POS display on IE10, remove debug message/comments

--- a/trunk/modules/phreepos/style_sheet/main.css
+++ b/trunk/modules/phreepos/style_sheet/main.css
@@ -61,12 +61,13 @@ html>body fieldset#search_part{
 }
 
 html>body fieldset#search_part ol {
-	list-style:none;	
+	list-style:none;
 }
 
 html>body fieldset#search_part ol li label{
+    display: inline-block; 
+    width: 300px;
     font-weight: normal;
-    float: right;
     text-align: right;
 }
 
@@ -99,14 +100,15 @@ html>body fieldset#totals_div ol {
 }
 
 html>body fieldset#totals_div ol li label{
+    display: inline-block; 
+    width: 300px;
     font-weight: normal;
-    float: right;
-    text-align: left;
+    text-align: right;
     font-size: 1.5em;
 }
 
 html>body fieldset#totals_div ol li label input{
-    text-align: left;
+    text-align: right;
 }
 
 /* end totals part */
